--- a/styles/style.css
+++ b/styles/style.css
@@ -5,57 +5,146 @@
     font-variation-settings:
         "wdth" 100;
 }
+
 /* shared styles*/
 
-.text-primary{
+.text-primary {
     color: #FD6E0A;
 }
 
-.dark-2{
+.secondary-bg{
+    background-color: #FFF8F3;
+}
+
+
+.dark-2 {
     color: #474747;
 
 }
 
-.btn-primary{
-    background-color:#FD6E0A ;
+.btn-primary {
+    background-color: #FD6E0A;
     font-weight: bold;
     color: white;
-    padding:18px 35px ;
+    padding: 18px 35px;
     border-radius: 5px;
     border: none;
     font-size: 20px;
+    margin-right: 30px;
 
 }
 
-
-/* nav styles */
-nav {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    margin: 50px 200px;
+.header {
+    background-image: url('../images/developer.png'), url('../images/header_bg.png');
+    background-repeat: no-repeat;
+    background-position: top left, bottom right;
 }
 
-.nav-title{
-    font-weight: 800;
-    font-size:45;
-}
+    /* nav styles */
+    nav {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        margin: 50px 200px;
+    }
 
-nav ul{
-    display: flex;
-    align-items: center;
+    .nav-title {
+        font-weight: 800;
+        font-size: 55px;
+    }
+
+    nav ul {
+        display: flex;
+        align-items: center;
 
 
-}
+    }
 
 
-nav ul li{
-    list-style: none;
-    margin-right: 51px;
+    nav ul li {
+        list-style: none;
+        margin-right: 51px;
 
-}
+    }
 
-nav li a{
-    text-decoration: none;
-    font-size: 20px;
-}
+    nav li a {
+        text-decoration: none;
+        font-size: 20px;
+    }
+
+    /* banner styles */
+    .banner {
+        display: flex;
+        justify-content: space-between;
+        margin: 0 35px 0 230px;
+
+    }
+
+    .banner-content {
+        max-width: 584px;
+
+    }
+
+
+    .banner-greetings {
+        font-size: 45px;
+        font-weight: 600px;
+    }
+
+    .banner-title {
+        font-size: 85px;
+        color: #181818;
+        font-weight: bold;
+    }
+
+    .banner-description {
+        font-size: 18px;
+        color: #757575;
+    }
+
+    .banner-description {
+        width: 580px;
+        ;
+    }
+
+    .section-title{
+        font-size: 35px;
+        font-weight: bold;
+        color:#181818;
+    }
+
+    .section-description{
+        font-size: 18px;
+        color:#757575 ;
+
+    }
+
+    /* main */
+    main{
+        max-width: 1140px;
+        margin: 0 auto;
+    }
+ 
+    /* about styles */
+    .about{
+        border-radius:10px ;
+        padding: 130px 150px;
+        text-align: center;
+        margin-top: 130px;
+    }
+    .item-title{
+        color: #757575;
+    }
+    .item-description{
+        color:#474747;
+        font-weight: 900;
+    }
+    .about-items{
+        display:flex;
+        justify-content: space-around;
+        margin-top: 130px;
+        /* margin-left: 230px; */
+       
+       
+        
+    }
