--- a/styles/style.css
+++ b/styles/style.css
@@ -124,13 +124,17 @@
         max-width: 1140px;
         margin: 0 auto;
     }
+    main section{
+        margin-top: 130px;
+        margin-bottom: 130px;
+    }
  
     /* about styles */
     .about{
         border-radius:10px ;
         padding: 130px 150px;
         text-align: center;
-        margin-top: 130px;
+        
     }
     .item-title{
         color: #757575;
@@ -147,4 +151,24 @@
        
        
         
+    }
+
+    .text-center{
+        text-align: center;
+    }
+
+    /* skills styles */
+
+    .skills-container{
+        display: flex;
+        gap: 24px;
+
+    }
+
+    .skills{
+        padding: 30px;
+        box-shadow: 0px 6px 50px 0px rgba(0,0,0,0.06);
+        border-radius: 10px;
+
+
     }
